# LazarusIRCTestServer

./: CMakeLists.txt  README.md  main.cc
net/: NetManager.cc  NetManager.h
server/: server.cc  server.h
